--- a/scss/_product-hero.scss
+++ b/scss/_product-hero.scss
@@ -18,6 +18,11 @@
 
 .jmproduct--hero-temp {
     margin-bottom: 70px;
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 	.product_hero__para {
         @include generateFont($jmFont, 18px, 28px);
 		p {
