--- a/scss/_promoblock.scss
+++ b/scss/_promoblock.scss
@@ -71,11 +71,11 @@
 	}
 	.col-md-7 {
 		h1, h2, h3, h4, h5, h6 {
-			@include generateFont($jmMediumFont, 40px, 48px, $jmWhiteColor);
+			@include generateFont($jmMediumFont, 40px, 48px, $jmDarkCharcoalColor);
 			margin-bottom: 30px;
 		}
 		p {
-			@include generateFont($jmFont, 18px, 27px, $jmWhiteColor);
+			@include generateFont($jmFont, 18px, 27px, $jmDarkCharcoalColor);
 		}
 	}
 }
